--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,34 @@ Dependencies/
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
 fastlane/report.xml
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
